--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "clean": "rm -rf dist",
-    "test": "jest",
-    "test-dev": "jest --watchAll"
+    "test-all": "jest",
+    "test-all-dev": "jest --watchAll",
+    "test-arrays": "npx jest src/tests/Arrays.test.ts",
+    "test-bsts": "npx jest src/tests/BinarySearchTrees.test.ts",
+    "test-lls": "npx jest src/tests/LinkedLists.test.ts",
+    "test-strings": "npx jest src/tests/Strings.test.ts",
+    "test-misc": "npx jest src/tests/Misc.test.ts"
   },
   "keywords": [],
   "author": "",
